# openapi.yaml
@@ -73,6 +73,61 @@ paths:
               schema:
                 $ref: '#/components/schemas/Post'
 
+  /settings:
+    get:
+      summary: Obtener configuraciones del blog
+      responses:
+        '200':
+          description: Configuraciones del blog
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BlogSettings'
+        '500':
+          description: Error al obtener configuraciones
+    put:
+      summary: Actualizar configuraciones del blog
+      parameters:
+        - name: uuid
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BlogSettings'
+      responses:
+        '200':
+          description: Configuraciones actualizadas
+        '400':
+          description: Plantilla no válida
+        '500':
+          description: Error al actualizar configuraciones
+
+  /profile:
+    put:
+      summary: Actualizar perfil de usuario
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Profile'
+      responses:
+        '200':
+          description: Perfil actualizado
+        '401':
+          description: Contraseña actual incorrecta
+        '404':
+          description: Usuario no encontrado
+        '500':
+          description: Error al actualizar el perfil
+
 components:
   schemas:
     Post:
@@ -123,6 +178,22 @@ components:
               type: string
             github:
               type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    Profile:
+      type: object
+      properties:
+        id:
+          type: integer
+        bio:
+          type: string
+        picture:
+          type: string
         createdAt:
           type: string
           format: date-time
